# python-project-lvl1

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: brain-games-check.yml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: __init__.py  even.py  gcd.py  is_prime.py  progression.py
brain_games/games/calculator/: __init__.py  calculator.py  evaluators.py  expressions.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/utils/: __init__.py  rand_actions.py
