[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "Учебный проект курса Python-программист на hexlet.io"
classifiers = [
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Environment :: Console"
]
authors = ["nox-wave"]
packages = [
    { include = "brain_games" }
]
repository = "https://github.com/Peccansy/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
isort = "^5.8.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
